--- a/.github/workflows/tester.yml
+++ b/.github/workflows/tester.yml
@@ -17,7 +17,7 @@ jobs:
         org: ${{ env.APP_NAME }}
         repo: ${{ env.APP_NAME }}
         version: '3.96'
-        bundle: false
+        bundle: 'false'
         
         
     
